--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper]{book}
+\documentclass[final]{article}
 \usepackage{main}
 
 \begin{document}
@@ -22,6 +22,7 @@
 \tableofcontents
 \newpage\pagenumbering{arabic}
 
-\include{tex/08-22}
-
+\include{tex/overview}
+\include{tex/probability}
+\include{tex/entropy}
 \end{document}
