Entropy and conditional entropy

--- a/main.sty
+++ b/main.sty
@@ -289,7 +289,7 @@ overlay={\begin{tcbclipinterior}
 \newcommand{\covariance}[2]{\operatorname{cov}\left(#1,#2\right)}
 \newcommand{\given}{\mid}
 \newcommand{\divides}{\mid}
-\newcommand{\drawsfrom}{\sim}
+\newcommand{\drawnfrom}{\sim}
 \newcommand{\indicator}[1]{\ensuremath{1_{#1}}}
 
 \newcommand{\naturals}{\ensuremath{\mathbb{N}}}
