--- a/main.sty
+++ b/main.sty
@@ -302,7 +302,8 @@ overlay={\begin{tcbclipinterior}
 \newcommand{\sampleavg}[1]{\ensuremath{\hat{#1}}}
 \newcommand{\relentropy}[2]{\ensuremath{D\left(#1 \parallel #2\right)}}
 \newcommand{\identically}{\equiv}
-
+\newcommand{\composedwith}{\circ}
+\newcommand{\length}[1]{\ensuremath{\ell\left(#1\right)}}
 
 % Todo stuff
 \usepackage{todonotes}
