--- a/main.tex
+++ b/main.tex
@@ -26,4 +26,5 @@
 \include{tex/probability}
 \include{tex/entropy}
 \include{tex/conditional-entropy}
+\include{tex/lossless-compression}
 \end{document}
