--- a/main.tex
+++ b/main.tex
@@ -27,4 +27,5 @@
 \include{tex/entropy}
 \include{tex/conditional-entropy}
 \include{tex/lossless-compression}
+\include{tex/preliminary-on-linear-algebra}
 \end{document}
