--- a/main.sty
+++ b/main.sty
@@ -295,11 +295,14 @@ overlay={\begin{tcbclipinterior}
 \newcommand{\naturals}{\ensuremath{\mathbb{N}}}
 \newcommand{\reals}{\ensuremath{\mathbb{R}}}
 \newcommand{\complexnums}{\ensuremath{\mathbb{C}}}
+\newcommand{\matrices}{\ensuremath{\mathbb{M}}}
 \newcommand{\isomorphic}{\cong}
 \renewcommand{\vec}[1]{\ensuremath{\mathbf{#1}}}
 \newcommand{\conj}[1]{\ensuremath{\overline{#1}}}
 \newcommand{\innerproduct}[2]{\ensuremath{\left\langle #1, #2\right\rangle}}
 \newcommand{\norm}[1]{\ensuremath{\left\lVert#1\right\rVert}}
+\newcommand{\vecspace}[1]{\ensuremath{\mathcal{#1}}}
+\newcommand{\directsum}{\ensuremath{\oplus}}
 
 \newcommand{\entropy}[1]{\ensuremath{H\left(#1\right)}}
 \newcommand{\binentropy}[1]{\ensuremath{h\left(#1\right)}}
