Almost finished with vector stuff

--- a/main.sty
+++ b/main.sty
@@ -303,6 +303,7 @@ overlay={\begin{tcbclipinterior}
 \newcommand{\norm}[1]{\ensuremath{\left\lVert#1\right\rVert}}
 \newcommand{\vecspace}[1]{\ensuremath{\mathcal{#1}}}
 \newcommand{\directsum}{\ensuremath{\oplus}}
+\newcommand{\tensorprod}{\ensuremath{\otimes}}
 
 \newcommand{\entropy}[1]{\ensuremath{H\left(#1\right)}}
 \newcommand{\binentropy}[1]{\ensuremath{h\left(#1\right)}}
