--- a/tex/preliminary-on-linear-algebra.tex
+++ b/tex/preliminary-on-linear-algebra.tex
@@ -343,5 +343,9 @@ If $A_1$ has matrix $M_1$, $A_2$ has matrix $M_2$, and so on, then
 \[A_1 \directsum A_2 \directsum \dots \directsum A_n \leftrightarrow \begin{bmatrix}M_1\\ &M_2\\ & &\ddots\\ & & & M_n\end{bmatrix}\begin{pmatrix}v_1\\v_2\\\vdots\\v_n\end{pmatrix}\]
 
 \begin{definition}[Tensor Product]
-    Given $\vecspace{V} = \complexnums^{\mathcal{X}}$ and $\vecspace{W} = \complexnums^{\mathcal{Y}}$
+    Given $\vecspace{V} = \complexnums^{\mathcal{X}}$ and $\vecspace{W} = \complexnums^{\mathcal{Y}}$, the tensor product $\vecspace{V} \tensorprod \vecspace{W}$ is defined
+    \[\vecspace{V} \tensorprod \vecspace{W} = \complexnums^{\mathcal{X} \times \mathcal{Y}} = \set{u:\mathcal{X} \times \mathcal{Y} \to \complexnums}\]
+    with
+    \[v \tensorprod w(a, b) = v(a)w(b)\]
+    and
 \end{definition}
