--- a/main.sty
+++ b/main.sty
@@ -313,6 +313,8 @@ overlay={\begin{tcbclipinterior}
 \newcommand{\composedwith}{\circ}
 \newcommand{\length}[1]{\ensuremath{\ell\left(#1\right)}}
 \newcommand{\optlength}[1]{\ensuremath{\ell^*\left(#1\right)}}
+\newcommand{\linop}[2]{\ensuremath{L\left(#1,#2\right)}}
+\newcommand{\boundop}[1]{\ensuremath{B\left(#1\right)}}
 
 \DeclareMathOperator{\spanset}{span}
 
