--- a/main.tex
+++ b/main.tex
@@ -28,4 +28,5 @@
 \include{tex/conditional-entropy}
 \include{tex/lossless-compression}
 \include{tex/preliminary-on-linear-algebra}
+\include{tex/spectral-theorem}
 \end{document}
