--- a/tex/spectral-theorem.tex
+++ b/tex/spectral-theorem.tex
@@ -102,4 +102,8 @@ Operators / Matrices with special Properties
           $P_{\vecspace{V}}P_{\vecspace{W}} = P_{\vecspace{V}}$.
 
     \item $U$ is unitary if $U^*U = U^* = I$.
+	e.g., $X = \begin{bmatrix}0&1\\1&0\end{bmatrix}$, $Y = \begin{bmatrix}0&i\\-i&0\end{bmatrix}$, $Z = \begin{bmatrix}1&0\\0&-1\end{bmatrix}$, the Pauli Matrices,
+	are unitary.
+
+	$U$ is unitary if and only if $\innerproduct{Uv}{Uw} = \innerproduct{v}{w}$. 
 \end{enumerate}
